--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "sequelize": "^6.34.0",
     "stripe": "^12.14.0"
   }
 }
